metadata/force-app/main/default/objects/CustomName_RUwCG__c/CustomName_RUwCG__c.object-meta.xml
<CustomObject>
    <description>Description_wVWsP</description>
    <label>CustomLabel_MCEVN</label>
    <nameField>
        <label>CustomLabel_MCEVN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_MCEVNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>