metadata/force-app/main/default/objects/CustomName_RUwCG__c/fields/CustomField_UUfYU__c.field-meta.xml
<CustomField>
    <fullName>CustomField_UUfYU__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldtEYGA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>